# cleanup-history-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
tests/: test.rs
