[package]
name = "cleanup-history"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
edition = "2018"
description = "Filters my `.bash_history` through a set of regexes, deduplicates, and sorts it by most recently used."
license = "MIT"
repository = "https://github.com/n8henrie/cleanup-history-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tempfile = "3"
